--- a/theme/_variables.scss
+++ b/theme/_variables.scss
@@ -1,5 +1,6 @@
 // Theme Variable overrides
 
-// Add variables here
+//Breadcrumb
+$breadcrumb-bg: #fff; // Inner background colour (Bootstrap override).
 
 @import "../src/variables";
